Fixed overflow on Heroes and Monsters summary scrolling title as well

--- a/client/src/pages/BattleBuilder/battleBuilder.scss
+++ b/client/src/pages/BattleBuilder/battleBuilder.scss
@@ -126,31 +126,33 @@
 		.roster-card {
 			background-color: var(--card-background-secondary);
 			height: 11rem;
-			overflow-y: auto;
-			.roster-name {
-				background-color: var(--card-background-secondary);
-				color: var(--card-text);
-				font-family: 'Mukta Vaani', sans-serif;
-			}
 			.roster-title {
 				font-size: 1.3rem;
 				text-align: center;
 			}
-			.roster-subtext {
-				font-style: italic;
-				font-weight: 300;
-				color: var(--card-subtext);
-				.close-btn {
-					padding: 0 0 0 auto;
-					color: #707070;
-					font-size: 0.9rem;
-					border: none;
-					background: none;
-					transition: color 0.2s;
+			.roster-creatures {
+				overflow-y: auto;
+				.roster-name {
+					background-color: var(--card-background-secondary);
+					color: var(--card-text);
+					font-family: 'Mukta Vaani', sans-serif;
 				}
-				.close-btn:hover {
-					color: #5e0c0c;
-					background: none;
+				.roster-subtext {
+					font-style: italic;
+					font-weight: 300;
+					color: var(--card-subtext);
+					.close-btn {
+						padding: 0 0 0 auto;
+						color: #707070;
+						font-size: 0.9rem;
+						border: none;
+						background: none;
+						transition: color 0.2s;
+					}
+					.close-btn:hover {
+						color: #5e0c0c;
+						background: none;
+					}
 				}
 			}
 		}
